# build-your-own-openclaw

./: .gitignore  CUSTOMIZATION.md  INFLUENCER_CAMPAIGN.md  OAUTH_DEEP_DIVE.md  OAUTH_EDITION_GUIDE.md  PLAN.md  PROVIDER_EXAMPLES.md  README.md  README.zh.md  WORKFLOW.md  probe_codex.sh
00-chat-loop/: README.md  README.zh.md  pyproject.toml
00-chat-loop/src/: __init__.py
00-chat-loop/src/core/: agent.py  session_state.py
00-chat-loop/src/mybot/cli/: chat.py  main.py
00-chat-loop/src/mybot/core/: agent.py  session_state.py
00-chat-loop/src/mybot/provider/llm/: base.py
00-chat-loop/src/mybot/utils/: config.py
00-chat-loop/src/provider/llm/: base.py
000-oauth/: README.md  pyproject.toml
000-oauth/scripts/: force_refresh.sh  inspect_token_store.sh  probe_chat.sh  probe_tools.sh
000-oauth/src/mybot/cli/: main.py
000-oauth/src/mybot/provider/llm/: __init__.py
000-oauth/tests/: conftest.py  test_oauth_login_simulation.py  test_oauth_refresh.py  test_oauth_secrets.py  test_sse_parser.py
01-tools/: README.md  README.zh.md
02-skills/: README.md  README.zh.md  pyproject.toml
03-persistence/: README.md  README.zh.md  pyproject.toml
04-slash-commands/: README.md  README.zh.md
05-compaction/: README.md  README.zh.md  pyproject.toml
06-web-tools/: README.md  README.zh.md  pyproject.toml
07-event-driven/: README.md  README.zh.md  pyproject.toml
08-config-hot-reload/: README.md  README.zh.md  pyproject.toml
09-channels/: README.md  README.zh.md  pyproject.toml
10-websocket/: README.md  README.zh.md
11-multi-agent-routing/: README.md  README.zh.md  pyproject.toml
12-cron-heartbeat/: README.md  README.zh.md
13-multi-layer-prompts/: README.md  README.zh.md
999-bootstrap-template/: pyproject.toml
999-bootstrap-template/src/yourpkg/cli/: main.py
web/: package.json  (+2 more)
(+142 files in other folders)
