[project]
name = "my-bot"
version = "0.1.0"
description = "Step 000: ChatGPT OAuth login (primitives only, no agent)"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mybot"]

[project.scripts]
my-bot = "mybot.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
