[project]
name = "yourpkg"
version = "0.1.0"
description = "A ChatGPT-OAuth-backed agent starter template"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yourpkg"]

[project.scripts]
# When you rename yourpkg → mynewbot, rename this too. The left side
# becomes your CLI command (`mynewbot login`).
yourbot = "yourpkg.cli.main:app"
